# sdlgl3-wavefront

./: CMakeLists.txt  README.md
cache/: README.txt
config/: app.cfg  renderer.cfg
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/tinyobjloader/: tiny_obj_loader.h
doc/: Windows_Dev_Setup.html
include/: Camera.h  Common.h  Frustum.h  GpuProgram.h  Material.h  Renderer.h  SceneNode.h  Shader.h
shaders/: default.frag  default.vert  shadow_mapping.frag
src/: Camera.cpp  Frustum.cpp  GpuProgram.cpp  Renderer.cpp  SceneNode.cpp  Shader.cpp  main.cpp
